# ts3idtools

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENCE.md  README.md  bench.sh  common.cmake
include/: base64.h  globals.h  sha1.h
src/: base64.c  globals.c  sha1.c  ts3idcrunch.c  ts3iddump.c  ts3idgen.c  ts3idtests.c
